--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "troy",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
