--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "target": "ES2022",
+    "module": "node16",
+    "moduleResolution": "node16",
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true
