--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "test": "tsc && node --test dist/messages.test.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
